feat: added new entities (like customModelMapper) and some fixes to services